--- a/app/src/main/res/layout/activity_locale.xml
+++ b/app/src/main/res/layout/activity_locale.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".LocaleActivity">
 
     <TextView
         android:id="@+id/txt_current_locale"
