--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,32 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/txt_current_locale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="locale: "
-        app:layout_constraintBottom_toTopOf="@id/btn"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btn_locale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="swich to JP"
-        app:layout_constraintBottom_toTopOf="@id/text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_android13"
+        android:text="LOCALE API"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
