LineBreakWordStyle attribute test

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,16 @@
         android:id="@+id/btn_locale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOCALE API"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="LOCALE API" />
 
     <Button
         android:id="@+id/btn_hyphen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hyphen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Hyphen"/>
+    <Button
+        android:id="@+id/btn_line_break"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LineBreak" />
 </GridLayout>
