--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LineBreak" />
+    <Button
+        android:id="@+id/btn_tile_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TileService" />
 </GridLayout>
