feat: Spatial Audio

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RevokePermission" />
+    <Button
+        android:id="@+id/btn_spatial_audio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SpatialAudio" />
 </GridLayout>
