--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,4 +38,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SpatialAudio" />
+
+    <Button
+        android:id="@+id/btn_fgs_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FGS TEST" />
 </GridLayout>
